Destroy observers eagerly when StopTracking is called.

Currently, if we decide to StopTracking a navigation at commit time,
some callbacks may still get invoked. In particular, browser-initiated
callbacks like WasShown and WasHidden may be called; timing and other
callbacks should be prevented by RenderPageTrackDecider policy in the
render process. This change makes us destroy observers eagerly at the
time StopTracking() gets called, which prevents us from invoking any
subsequent callbacks on observers after this point.

BUG=648361

Review-Url: https://codereview.chromium.org/2354583003
Cr-Commit-Position: refs/heads/master@{#419729}

Former-commit-id: 16e566dd1cd74c5a5def9a1d60077f6973e9f000